# fcitx5-boshiamy

./: CMakeLists.txt  Messages.sh  README.md  README.zh_TW.md  org.fcitx.Fcitx5.Addon.Boshiamy.metainfo.xml.in
po/: LINGUAS  fcitx5-boshiamy.pot  zh_TW.po
tables/: CMakeLists.txt
